# plyoreacto

./: README.md
plyoreacto/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  events.fbs
plyoreacto/pyobserver/: Dockerfile  msgevents.py  observer.py  plugins.py  requirements.txt
plyoreacto/pyobserver/events/: Event.py  EventType.py  ImageDeletedEvent.py  ImageLabelScore.py  ImageScoredEvent.py  ImageStoredEvent.py  NewImageEvent.py
plyoreacto/src/: event_engine.rs  events.rs  events_generated.rs  image_score_plugin.rs  image_store_plugin.rs  main.rs  new_image_plugin.rs
proto/: Dockerfile  Makefile  README.md  broker.py  client.py  docker-compose-basic.yml  docker-compose.yml  pluginA.py  pluginB.py  requirements.txt
