[package]
name = "plyoreacto"
version = "0.1.0"
edition = "2021"
authors = ["Joe Stubbs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "plyoreacto"
path = "src/main.rs"


[dependencies]
zmq = "0.9"
flatbuffers = "2.1.2"
uuid = { version = "0.8", features = ["v4"] }
rand = "0.8.5"